# vecforge

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  index.html  pyproject.toml  test_scores.py  test_scores_varied.py
.github/workflows/: publish.yml  tests.yml
benchmarks/: bench_quantum.py  bench_search.py
docs/: api_reference.md  cli_reference.md  configuration.md  core_concepts.md  ingestion.md  installation.md  quantum.md  quickstart.md  rest_api.md  search.md  security.md
examples/: codebase_assistant.py  gis_data_search.py  hospital_search.py  legal_document_search.py  multi_tenant_saas.py  rag_pipeline.py
tests/: __init__.py  verify_examples.py
tests/integration/: test_cli.py  test_pipeline.py  test_routes.py
tests/security/: test_namespace_isolation.py  test_rbac.py
tests/unit/: test_bm25.py  test_coverage.py  test_exceptions.py  test_filters.py  test_ingest.py  test_multimodal.py  test_quantum.py  test_storage.py
vecforge/: __init__.py  exceptions.py
vecforge/cli/: main.py
vecforge/core/: bm25.py  embedder.py  indexer.py  reranker.py  storage.py  vault.py
vecforge/ingest/: audio.py  dispatcher.py  document.py  vision.py
vecforge/quantum/: __init__.py  amplitude_encoder.py  grover_amplifier.py  reranker.py
vecforge/search/: cascade.py  crossmodal.py  filters.py  hybrid.py
vecforge/security/: audit.py  encryption.py  namespaces.py  rbac.py  snapshots.py
vecforge/server/: app.py  routes.py
vecforge/sync/: __init__.py  cloud.py
